--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 MONGO_URL =  mongodb+srv://inventooly-blogs:inventooly-blogs@ut-blogs-try.alc7t.mongodb.net/test
 JWT_SECRET = itsasecret
+CI = false
