--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ MONGO_URL = mongodb+srv://inventooly-blogs:inventooly-blogs@ut-blogs-try.alc7t.m
 JWT_SECRET = itsasecret
 DEV_APP_API=https://api.inventooly.com/
 DEV_APP=https://app.inventooly.com/
+CI = false
